assign2/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ELPS

Grammar

Rule 0     S' -> start
Rule 1     start -> SourceFile
Rule 2     Type -> TypeName
Rule 3     Type -> TypeLit
Rule 4     Type -> LPRN Type RPRN
Rule 5     TypeName -> TypeToken
Rule 6     TypeName -> QualifiedIdent
Rule 7     TypeToken -> INT_T
Rule 8     TypeToken -> FLOAT_T
Rule 9     TypeToken -> UINT_T
Rule 10    TypeToken -> COMPLEX_T
Rule 11    TypeToken -> RUNE_T
Rule 12    TypeToken -> BOOL_T
Rule 13    TypeToken -> STRING_T
Rule 14    TypeToken -> TYPE IDENT
Rule 15    TypeLit -> ArrayType
Rule 16    TypeLit -> StructType
Rule 17    TypeLit -> PtrType
Rule 18    ArrayType -> LSQR ArrayLength RSQR ElementType
Rule 19    ArrayLength -> Expr
Rule 20    ElementType -> Type
Rule 21    StructType -> STRUCT LCURL FieldDeclRep RCURL
Rule 22    FieldDeclRep -> FieldDecl SEMCLN FieldDeclRep
Rule 23    FieldDeclRep -> epsilon
Rule 24    FieldDecl -> IdentList Type
Rule 25    PtrType -> MUL BaseType
Rule 26    BaseType -> Type
Rule 27    Signature -> Parameters
Rule 28    Signature -> Parameters Type
Rule 29    Parameters -> LPRN RPRN
Rule 30    Parameters -> LPRN ParamList RPRN
Rule 31    ParamList -> ParamDecl
Rule 32    ParamList -> ParamDeclCommaRep
Rule 33    ParamDeclCommaRep -> COMMA ParamDecl ParamDeclCommaRep
Rule 34    ParamDeclCommaRep -> ParamDecl COMMA ParamDecl
Rule 35    ParamDecl -> IdentList Type
Rule 36    ParamDecl -> Type
Rule 37    Block -> LCURL StmtList RCURL
Rule 38    StmtList -> Statement SEMCLN StmtList
Rule 39    StmtList -> epsilon
Rule 40    Declaration -> ConstDecl
Rule 41    Declaration -> TypeDecl
Rule 42    Declaration -> VarDecl
Rule 43    TopLvlDecl -> Declaration
Rule 44    TopLvlDecl -> FuncDecl
Rule 45    TopLvlDecl -> MethodDecl
Rule 46    ConstDecl -> CONST ConstSpec
Rule 47    ConstDecl -> CONST LPRN ConstSpecRep RPRN
Rule 48    ConstSpecRep -> ConstSpec SEMCLN ConstSpecRep
Rule 49    ConstSpecRep -> epsilon
Rule 50    ConstSpec -> IdentList Type AGN ExprList
Rule 51    IdentList -> IDENT IdentRep
Rule 52    IdentRep -> COMMA IDENT IdentRep
Rule 53    IdentRep -> epsilon
Rule 54    ExprList -> Expr
Rule 55    ExprList -> Expr COMMA ExprList
Rule 56    TypeDecl -> TYPE TypeSpec
Rule 57    TypeDecl -> TYPE LPRN TypeSpecRep RPRN
Rule 58    TypeSpecRep -> TypeSpecRep TypeSpec SEMCLN
Rule 59    TypeSpecRep -> epsilon
Rule 60    TypeSpec -> TypeDef
Rule 61    TypeDef -> IDENT Type
Rule 62    VarDecl -> VAR VarSpec
Rule 63    VarDecl -> VAR LPRN VarSpecRep RPRN
Rule 64    VarSpecRep -> VarSpecRep VarSpec SEMCLN
Rule 65    VarSpecRep -> epsilon
Rule 66    VarSpec -> IdentList Type ExprListOpt
Rule 67    VarSpec -> IdentList AGN ExprList
Rule 68    ExprListOpt -> AGN ExprList
Rule 69    ExprListOpt -> epsilon
Rule 70    ShortVarDecl -> IDENT DEFN Expr
Rule 71    FuncDecl -> FUNC FuncName Signature FuncBody
Rule 72    FuncDecl -> FUNC FuncName Signature
Rule 73    FuncName -> IDENT
Rule 74    FuncBody -> Block
Rule 75    MethodDecl -> FUNC Receiver MethodName Signature
Rule 76    MethodDecl -> FUNC Receiver MethodName Signature FuncBody
Rule 77    Receiver -> Parameters
Rule 78    MethodName -> IDENT
Rule 79    Operand -> Literal
Rule 80    Operand -> OperandName
Rule 81    Operand -> LPRN Expr RPRN
Rule 82    Literal -> BasicLit
Rule 83    BasicLit -> INTEGER
Rule 84    BasicLit -> OCTAL
Rule 85    BasicLit -> HEX
Rule 86    BasicLit -> FLOAT
Rule 87    BasicLit -> IMAGINARY
Rule 88    BasicLit -> RUNE
Rule 89    BasicLit -> STRING
Rule 90    OperandName -> IDENT
Rule 91    QualifiedIdent -> IDENT DOT TypeName
Rule 92    PmryExpr -> Operand
Rule 93    PmryExpr -> Conversion
Rule 94    PmryExpr -> PmryExpr Slice
Rule 95    PmryExpr -> PmryExpr Selector
Rule 96    PmryExpr -> PmryExpr TypeAssertion
Rule 97    PmryExpr -> PmryExpr LSQR Expr RSQR
Rule 98    PmryExpr -> PmryExpr LPRN ExprListTypeOpt RPRN
Rule 99    Selector -> DOT IDENT
Rule 100   Slice -> LSQR ExprOpt COLON ExprOpt RSQR
Rule 101   Slice -> LSQR ExprOpt COLON Expr COLON Expr RSQR
Rule 102   TypeAssertion -> DOT LPRN Type RPRN
Rule 103   ExprListTypeOpt -> ExprList
Rule 104   ExprListTypeOpt -> epsilon
Rule 105   Expr -> UnaryExpr
Rule 106   Expr -> Expr LOR Expr
Rule 107   Expr -> Expr LAND Expr
Rule 108   Expr -> Expr NEQ Expr
Rule 109   Expr -> Expr EQL Expr
Rule 110   Expr -> Expr LSS Expr
Rule 111   Expr -> Expr GTR Expr
Rule 112   Expr -> Expr LEQ Expr
Rule 113   Expr -> Expr GEQ Expr
Rule 114   Expr -> Expr OR Expr
Rule 115   Expr -> Expr XOR Expr
Rule 116   Expr -> Expr QUO Expr
Rule 117   Expr -> Expr REM Expr
Rule 118   Expr -> Expr SHL Expr
Rule 119   Expr -> Expr SHR Expr
Rule 120   Expr -> Expr ADD Expr
Rule 121   Expr -> Expr SUB Expr
Rule 122   Expr -> Expr MUL Expr
Rule 123   Expr -> Expr AND Expr
Rule 124   ExprOpt -> Expr
Rule 125   ExprOpt -> epsilon
Rule 126   UnaryExpr -> PmryExpr
Rule 127   UnaryExpr -> UnaryOp UnaryExpr
Rule 128   UnaryExpr -> NOT UnaryExpr
Rule 129   UnaryOp -> ADD
Rule 130   UnaryOp -> SUB
Rule 131   UnaryOp -> MUL
Rule 132   UnaryOp -> AND
Rule 133   Conversion -> TYPECAST Type LPRN Expr RPRN
Rule 134   Statement -> Declaration
Rule 135   Statement -> LabeledStmt
Rule 136   Statement -> SimpleStmt
Rule 137   Statement -> ReturnStmt
Rule 138   Statement -> BreakStmt
Rule 139   Statement -> ContinueStmt
Rule 140   Statement -> GotoStmt
Rule 141   Statement -> Block
Rule 142   Statement -> IfStmt
Rule 143   Statement -> SwitchStmt
Rule 144   Statement -> ForStmt
Rule 145   SimpleStmt -> epsilon
Rule 146   SimpleStmt -> ExprStmt
Rule 147   SimpleStmt -> IncDecStmt
Rule 148   SimpleStmt -> Assignment
Rule 149   SimpleStmt -> ShortVarDecl
Rule 150   LabeledStmt -> Label COLON Statement
Rule 151   Label -> IDENT
Rule 152   ExprStmt -> Expr
Rule 153   IncDecStmt -> Expr INC
Rule 154   IncDecStmt -> Expr DEC
Rule 155   GotoStmt -> GOTO Label
Rule 156   Assignment -> ExprList AssignOp ExprList
Rule 157   AssignOp -> ADD_AGN
Rule 158   AssignOp -> SUB_AGN
Rule 159   AssignOp -> MUL_AGN
Rule 160   AssignOp -> QUO_AGN
Rule 161   AssignOp -> REM_AGN
Rule 162   AssignOp -> AND_AGN
Rule 163   AssignOp -> OR_AGN
Rule 164   AssignOp -> XOR_AGN
Rule 165   AssignOp -> SHL_AGN
Rule 166   AssignOp -> SHR_AGN
Rule 167   AssignOp -> AGN
Rule 168   IfStmt -> IF Expr Block ElseOpt
Rule 169   ElseOpt -> ELSE IfStmt
Rule 170   ElseOpt -> ELSE Block
Rule 171   ElseOpt -> epsilon
Rule 172   SwitchStmt -> ExprSwitchStmt
Rule 173   ExprSwitchStmt -> SWITCH Expr LCURL ExprCaseClauseRep RCURL
Rule 174   ExprCaseClauseRep -> ExprCaseClauseRep ExprCaseClause
Rule 175   ExprCaseClauseRep -> epsilon
Rule 176   ExprCaseClause -> ExprSwitchCase COLON StmtList
Rule 177   ExprSwitchCase -> CASE Expr
Rule 178   ExprSwitchCase -> DEFAULT
Rule 179   ForStmt -> FOR CondBlkOpt Block
Rule 180   CondBlkOpt -> epsilon
Rule 181   CondBlkOpt -> Condition
Rule 182   CondBlkOpt -> ForClause
Rule 183   Condition -> Expr
Rule 184   ForClause -> SimpleStmt SEMCLN SEMCLN SimpleStmt
Rule 185   ForClause -> SimpleStmt SEMCLN Condition SEMCLN SimpleStmt
Rule 186   ReturnStmt -> RETURN
Rule 187   ReturnStmt -> RETURN Expr
Rule 188   BreakStmt -> BREAK
Rule 189   BreakStmt -> BREAK Label
Rule 190   ContinueStmt -> CONTINUE
Rule 191   ContinueStmt -> CONTINUE Label
Rule 192   SourceFile -> PkgClause SEMCLN ImportDeclRep TopLvlDeclRep
Rule 193   ImportDeclRep -> epsilon
Rule 194   ImportDeclRep -> ImportDeclRep ImportDecl SEMCLN
Rule 195   TopLvlDeclRep -> TopLvlDeclRep TopLvlDecl SEMCLN
Rule 196   TopLvlDeclRep -> epsilon
Rule 197   PkgClause -> PACKAGE PkgName
Rule 198   PkgName -> IDENT
Rule 199   ImportDecl -> IMPORT ImportSpec
Rule 200   ImportDecl -> IMPORT LPRN ImportSpecRep RPRN
Rule 201   ImportSpecRep -> ImportSpecRep ImportSpec SEMCLN
Rule 202   ImportSpecRep -> epsilon
Rule 203   ImportSpec -> PkgNameDotOpt ImportPath
Rule 204   PkgNameDotOpt -> DOT
Rule 205   PkgNameDotOpt -> PkgName
Rule 206   PkgNameDotOpt -> epsilon
Rule 207   ImportPath -> STRING
Rule 208   epsilon -> <empty>

Terminals, with rules where they appear

ADD                  : 120 129
ADD_AGN              : 157
AGN                  : 50 67 68 167
AND                  : 123 132
AND_AGN              : 162
BOOL_T               : 12
BREAK                : 188 189
CASE                 : 177
COLON                : 100 101 101 150 176
COMMA                : 33 34 52 55
COMPLEX_T            : 10
CONST                : 46 47
CONTINUE             : 190 191
DEC                  : 154
DEFAULT              : 178
DEFN                 : 70
DOT                  : 91 99 102 204
ELPS                 : 
ELSE                 : 169 170
EQL                  : 109
FLOAT                : 86
FLOAT_T              : 8
FOR                  : 179
FUNC                 : 71 72 75 76
GEQ                  : 113
GOTO                 : 155
GTR                  : 111
HEX                  : 85
IDENT                : 14 51 52 61 70 73 78 90 91 99 151 198
IF                   : 168
IMAGINARY            : 87
IMPORT               : 199 200
INC                  : 153
INTEGER              : 83
INT_T                : 7
LAND                 : 107
LCURL                : 21 37 173
LEQ                  : 112
LOR                  : 106
LPRN                 : 4 29 30 47 57 63 81 98 102 133 200
LSQR                 : 18 97 100 101
LSS                  : 110
MUL                  : 25 122 131
MUL_AGN              : 159
NEQ                  : 108
NOT                  : 128
OCTAL                : 84
OR                   : 114
OR_AGN               : 163
PACKAGE              : 197
QUO                  : 116
QUO_AGN              : 160
RCURL                : 21 37 173
REM                  : 117
REM_AGN              : 161
RETURN               : 186 187
RPRN                 : 4 29 30 47 57 63 81 98 102 133 200
RSQR                 : 18 97 100 101
RUNE                 : 88
RUNE_T               : 11
SEMCLN               : 22 38 48 58 64 184 184 185 185 192 194 195 201
SHL                  : 118
SHL_AGN              : 165
SHR                  : 119
SHR_AGN              : 166
STRING               : 89 207
STRING_T             : 13
STRUCT               : 21
SUB                  : 121 130
SUB_AGN              : 158
SWITCH               : 173
TYPE                 : 14 56 57
TYPECAST             : 133
UINT_T               : 9
VAR                  : 62 63
XOR                  : 115
XOR_AGN              : 164
error                : 

Nonterminals, with rules where they appear

ArrayLength          : 18
ArrayType            : 15
AssignOp             : 156
Assignment           : 148
BaseType             : 25
BasicLit             : 82
Block                : 74 141 168 170 179
BreakStmt            : 138
CondBlkOpt           : 179
Condition            : 181 185
ConstDecl            : 40
ConstSpec            : 46 48
ConstSpecRep         : 47 48
ContinueStmt         : 139
Conversion           : 93
Declaration          : 43 134
ElementType          : 18
ElseOpt              : 168
Expr                 : 19 54 55 70 81 97 101 101 106 106 107 107 108 108 109 109 110 110 111 111 112 112 113 113 114 114 115 115 116 116 117 117 118 118 119 119 120 120 121 121 122 122 123 123 124 133 152 153 154 168 173 177 183 187
ExprCaseClause       : 174
ExprCaseClauseRep    : 173 174
ExprList             : 50 55 67 68 103 156 156
ExprListOpt          : 66
ExprListTypeOpt      : 98
ExprOpt              : 100 100 101
ExprStmt             : 146
ExprSwitchCase       : 176
ExprSwitchStmt       : 172
FieldDecl            : 22
FieldDeclRep         : 21 22
ForClause            : 182
ForStmt              : 144
FuncBody             : 71 76
FuncDecl             : 44
FuncName             : 71 72
GotoStmt             : 140
IdentList            : 24 35 50 66 67
IdentRep             : 51 52
IfStmt               : 142 169
ImportDecl           : 194
ImportDeclRep        : 192 194
ImportPath           : 203
ImportSpec           : 199 201
ImportSpecRep        : 200 201
IncDecStmt           : 147
Label                : 150 155 189 191
LabeledStmt          : 135
Literal              : 79
MethodDecl           : 45
MethodName           : 75 76
Operand              : 92
OperandName          : 80
ParamDecl            : 31 33 34 34
ParamDeclCommaRep    : 32 33
ParamList            : 30
Parameters           : 27 28 77
PkgClause            : 192
PkgName              : 197 205
PkgNameDotOpt        : 203
PmryExpr             : 94 95 96 97 98 126
PtrType              : 17
QualifiedIdent       : 6
Receiver             : 75 76
ReturnStmt           : 137
Selector             : 95
ShortVarDecl         : 149
Signature            : 71 72 75 76
SimpleStmt           : 136 184 184 185 185
Slice                : 94
SourceFile           : 1
Statement            : 38 150
StmtList             : 37 38 176
StructType           : 16
SwitchStmt           : 143
TopLvlDecl           : 195
TopLvlDeclRep        : 192 195
Type                 : 4 20 24 26 28 35 36 50 61 66 102 133
TypeAssertion        : 96
TypeDecl             : 41
TypeDef              : 60
TypeLit              : 3
TypeName             : 2 91
TypeSpec             : 56 58
TypeSpecRep          : 57 58
TypeToken            : 5
UnaryExpr            : 105 127 128
UnaryOp              : 127
VarDecl              : 42
VarSpec              : 62 64
VarSpecRep           : 63 64
epsilon              : 23 39 49 53 59 65 69 104 125 145 171 175 180 193 196 202 206
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . SourceFile
    (192) SourceFile -> . PkgClause SEMCLN ImportDeclRep TopLvlDeclRep
    (197) PkgClause -> . PACKAGE PkgName

    PACKAGE         shift and go to state 1

    SourceFile                     shift and go to state 2
    PkgClause                      shift and go to state 3
    start                          shift and go to state 4

state 1

    (197) PkgClause -> PACKAGE . PkgName
    (198) PkgName -> . IDENT

    IDENT           shift and go to state 5

    PkgName                        shift and go to state 6

state 2

    (1) start -> SourceFile .

    $end            reduce using rule 1 (start -> SourceFile .)


state 3

    (192) SourceFile -> PkgClause . SEMCLN ImportDeclRep TopLvlDeclRep

    SEMCLN          shift and go to state 7


state 4

    (0) S' -> start .



state 5

    (198) PkgName -> IDENT .

    SEMCLN          reduce using rule 198 (PkgName -> IDENT .)
    STRING          reduce using rule 198 (PkgName -> IDENT .)


state 6

    (197) PkgClause -> PACKAGE PkgName .

    SEMCLN          reduce using rule 197 (PkgClause -> PACKAGE PkgName .)


state 7

    (192) SourceFile -> PkgClause SEMCLN . ImportDeclRep TopLvlDeclRep
    (193) ImportDeclRep -> . epsilon
    (194) ImportDeclRep -> . ImportDeclRep ImportDecl SEMCLN
    (208) epsilon -> .

    IMPORT          reduce using rule 208 (epsilon -> .)
    FUNC            reduce using rule 208 (epsilon -> .)
    CONST           reduce using rule 208 (epsilon -> .)
    TYPE            reduce using rule 208 (epsilon -> .)
    VAR             reduce using rule 208 (epsilon -> .)
    $end            reduce using rule 208 (epsilon -> .)

    epsilon                        shift and go to state 8
    ImportDeclRep                  shift and go to state 9

state 8

    (193) ImportDeclRep -> epsilon .

    IMPORT          reduce using rule 193 (ImportDeclRep -> epsilon .)
    FUNC            reduce using rule 193 (ImportDeclRep -> epsilon .)
    CONST           reduce using rule 193 (ImportDeclRep -> epsilon .)
    TYPE            reduce using rule 193 (ImportDeclRep -> epsilon .)
    VAR             reduce using rule 193 (ImportDeclRep -> epsilon .)
    $end            reduce using rule 193 (ImportDeclRep -> epsilon .)


state 9

    (192) SourceFile -> PkgClause SEMCLN ImportDeclRep . TopLvlDeclRep
    (194) ImportDeclRep -> ImportDeclRep . ImportDecl SEMCLN
    (195) TopLvlDeclRep -> . TopLvlDeclRep TopLvlDecl SEMCLN
    (196) TopLvlDeclRep -> . epsilon
    (199) ImportDecl -> . IMPORT ImportSpec
    (200) ImportDecl -> . IMPORT LPRN ImportSpecRep RPRN
    (208) epsilon -> .

    IMPORT          shift and go to state 13
    FUNC            reduce using rule 208 (epsilon -> .)
    CONST           reduce using rule 208 (epsilon -> .)
    TYPE            reduce using rule 208 (epsilon -> .)
    VAR             reduce using rule 208 (epsilon -> .)
    $end            reduce using rule 208 (epsilon -> .)

    epsilon                        shift and go to state 10
    TopLvlDeclRep                  shift and go to state 11
    ImportDecl                     shift and go to state 12

state 10

    (196) TopLvlDeclRep -> epsilon .

    FUNC            reduce using rule 196 (TopLvlDeclRep -> epsilon .)
    CONST           reduce using rule 196 (TopLvlDeclRep -> epsilon .)
    TYPE            reduce using rule 196 (TopLvlDeclRep -> epsilon .)
    VAR             reduce using rule 196 (TopLvlDeclRep -> epsilon .)
    $end            reduce using rule 196 (TopLvlDeclRep -> epsilon .)


state 11

    (192) SourceFile -> PkgClause SEMCLN ImportDeclRep TopLvlDeclRep .
    (195) TopLvlDeclRep -> TopLvlDeclRep . TopLvlDecl SEMCLN
    (43) TopLvlDecl -> . Declaration
    (44) TopLvlDecl -> . FuncDecl
    (45) TopLvlDecl -> . MethodDecl
    (40) Declaration -> . ConstDecl
    (41) Declaration -> . TypeDecl
    (42) Declaration -> . VarDecl
    (71) FuncDecl -> . FUNC FuncName Signature FuncBody
    (72) FuncDecl -> . FUNC FuncName Signature
    (75) MethodDecl -> . FUNC Receiver MethodName Signature
    (76) MethodDecl -> . FUNC Receiver MethodName Signature FuncBody
    (46) ConstDecl -> . CONST ConstSpec
    (47) ConstDecl -> . CONST LPRN ConstSpecRep RPRN
    (56) TypeDecl -> . TYPE TypeSpec
    (57) TypeDecl -> . TYPE LPRN TypeSpecRep RPRN
    (62) VarDecl -> . VAR VarSpec
    (63) VarDecl -> . VAR LPRN VarSpecRep RPRN

    $end            reduce using rule 192 (SourceFile -> PkgClause SEMCLN ImportDeclRep TopLvlDeclRep .)
    FUNC            shift and go to state 17
    CONST           shift and go to state 14
    TYPE            shift and go to state 22
    VAR             shift and go to state 18

    MethodDecl                     shift and go to state 20
    TypeDecl                       shift and go to state 16
    VarDecl                        shift and go to state 21
    FuncDecl                       shift and go to state 24
    Declaration                    shift and go to state 15
    TopLvlDecl                     shift and go to state 19
    ConstDecl                      shift and go to state 23

state 12

    (194) ImportDeclRep -> ImportDeclRep ImportDecl . SEMCLN

    SEMCLN          shift and go to state 25


state 13

    (199) ImportDecl -> IMPORT . ImportSpec
    (200) ImportDecl -> IMPORT . LPRN ImportSpecRep RPRN
    (203) ImportSpec -> . PkgNameDotOpt ImportPath
    (204) PkgNameDotOpt -> . DOT
    (205) PkgNameDotOpt -> . PkgName
    (206) PkgNameDotOpt -> . epsilon
    (198) PkgName -> . IDENT
    (208) epsilon -> .

    LPRN            shift and go to state 26
    DOT             shift and go to state 31
    IDENT           shift and go to state 5
    STRING          reduce using rule 208 (epsilon -> .)

    PkgName                        shift and go to state 27
    ImportSpec                     shift and go to state 28
    epsilon                        shift and go to state 29
    PkgNameDotOpt                  shift and go to state 30

state 14

    (46) ConstDecl -> CONST . ConstSpec
    (47) ConstDecl -> CONST . LPRN ConstSpecRep RPRN
    (50) ConstSpec -> . IdentList Type AGN ExprList
    (51) IdentList -> . IDENT IdentRep

    LPRN            shift and go to state 32
    IDENT           shift and go to state 35

    IdentList                      shift and go to state 33
    ConstSpec                      shift and go to state 34

state 15

    (43) TopLvlDecl -> Declaration .

    SEMCLN          reduce using rule 43 (TopLvlDecl -> Declaration .)


state 16

    (41) Declaration -> TypeDecl .

    SEMCLN          reduce using rule 41 (Declaration -> TypeDecl .)


state 17

    (71) FuncDecl -> FUNC . FuncName Signature FuncBody
    (72) FuncDecl -> FUNC . FuncName Signature
    (75) MethodDecl -> FUNC . Receiver MethodName Signature
    (76) MethodDecl -> FUNC . Receiver MethodName Signature FuncBody
    (73) FuncName -> . IDENT
    (77) Receiver -> . Parameters
    (29) Parameters -> . LPRN RPRN
    (30) Parameters -> . LPRN ParamList RPRN

    IDENT           shift and go to state 37
    LPRN            shift and go to state 36

    Parameters                     shift and go to state 38
    FuncName                       shift and go to state 39
    Receiver                       shift and go to state 40

state 18

    (62) VarDecl -> VAR . VarSpec
    (63) VarDecl -> VAR . LPRN VarSpecRep RPRN
    (66) VarSpec -> . IdentList Type ExprListOpt
    (67) VarSpec -> . IdentList AGN ExprList
    (51) IdentList -> . IDENT IdentRep

    LPRN            shift and go to state 41
    IDENT           shift and go to state 35

    IdentList                      shift and go to state 42
    VarSpec                        shift and go to state 43

state 19

    (195) TopLvlDeclRep -> TopLvlDeclRep TopLvlDecl . SEMCLN

    SEMCLN          shift and go to state 44


state 20

    (45) TopLvlDecl -> MethodDecl .

    SEMCLN          reduce using rule 45 (TopLvlDecl -> MethodDecl .)


state 21

    (42) Declaration -> VarDecl .

    SEMCLN          reduce using rule 42 (Declaration -> VarDecl .)


state 22

    (56) TypeDecl -> TYPE . TypeSpec
    (57) TypeDecl -> TYPE . LPRN TypeSpecRep RPRN
    (60) TypeSpec -> . TypeDef
    (61) TypeDef -> . IDENT Type

    LPRN            shift and go to state 45
    IDENT           shift and go to state 47

    TypeSpec                       shift and go to state 48
    TypeDef                        shift and go to state 46

state 23

    (40) Declaration -> ConstDecl .

    SEMCLN          reduce using rule 40 (Declaration -> ConstDecl .)


state 24

    (44) TopLvlDecl -> FuncDecl .

    SEMCLN          reduce using rule 44 (TopLvlDecl -> FuncDecl .)


state 25

    (194) ImportDeclRep -> ImportDeclRep ImportDecl SEMCLN .

    IMPORT          reduce using rule 194 (ImportDeclRep -> ImportDeclRep ImportDecl SEMCLN .)
    FUNC            reduce using rule 194 (ImportDeclRep -> ImportDeclRep ImportDecl SEMCLN .)
    CONST           reduce using rule 194 (ImportDeclRep -> ImportDeclRep ImportDecl SEMCLN .)
    TYPE            reduce using rule 194 (ImportDeclRep -> ImportDeclRep ImportDecl SEMCLN .)
    VAR             reduce using rule 194 (ImportDeclRep -> ImportDeclRep ImportDecl SEMCLN .)
    $end            reduce using rule 194 (ImportDeclRep -> ImportDeclRep ImportDecl SEMCLN .)


state 26

    (200) ImportDecl -> IMPORT LPRN . ImportSpecRep RPRN
    (201) ImportSpecRep -> . ImportSpecRep ImportSpec SEMCLN
    (202) ImportSpecRep -> . epsilon
    (208) epsilon -> .

    RPRN            reduce using rule 208 (epsilon -> .)
    DOT             reduce using rule 208 (epsilon -> .)
    IDENT           reduce using rule 208 (epsilon -> .)
    STRING          reduce using rule 208 (epsilon -> .)

    epsilon                        shift and go to state 49
    ImportSpecRep                  shift and go to state 50

state 27

    (205) PkgNameDotOpt -> PkgName .

    STRING          reduce using rule 205 (PkgNameDotOpt -> PkgName .)


state 28

    (199) ImportDecl -> IMPORT ImportSpec .

    SEMCLN          reduce using rule 199 (ImportDecl -> IMPORT ImportSpec .)


state 29

    (206) PkgNameDotOpt -> epsilon .

    STRING          reduce using rule 206 (PkgNameDotOpt -> epsilon .)


state 30

    (203) ImportSpec -> PkgNameDotOpt . ImportPath
    (207) ImportPath -> . STRING

    STRING          shift and go to state 52

    ImportPath                     shift and go to state 51

state 31

    (204) PkgNameDotOpt -> DOT .

    STRING          reduce using rule 204 (PkgNameDotOpt -> DOT .)


state 32

    (47) ConstDecl -> CONST LPRN . ConstSpecRep RPRN
    (48) ConstSpecRep -> . ConstSpec SEMCLN ConstSpecRep
    (49) ConstSpecRep -> . epsilon
    (50) ConstSpec -> . IdentList Type AGN ExprList
    (208) epsilon -> .
    (51) IdentList -> . IDENT IdentRep

    RPRN            reduce using rule 208 (epsilon -> .)
    IDENT           shift and go to state 35

    IdentList                      shift and go to state 33
    ConstSpec                      shift and go to state 53
    ConstSpecRep                   shift and go to state 54
    epsilon                        shift and go to state 55

state 33

    (50) ConstSpec -> IdentList . Type AGN ExprList
    (2) Type -> . TypeName
    (3) Type -> . TypeLit
    (4) Type -> . LPRN Type RPRN
    (5) TypeName -> . TypeToken
    (6) TypeName -> . QualifiedIdent
    (15) TypeLit -> . ArrayType
    (16) TypeLit -> . StructType
    (17) TypeLit -> . PtrType
    (7) TypeToken -> . INT_T
    (8) TypeToken -> . FLOAT_T
    (9) TypeToken -> . UINT_T
    (10) TypeToken -> . COMPLEX_T
    (11) TypeToken -> . RUNE_T
    (12) TypeToken -> . BOOL_T
    (13) TypeToken -> . STRING_T
    (14) TypeToken -> . TYPE IDENT
    (91) QualifiedIdent -> . IDENT DOT TypeName
    (18) ArrayType -> . LSQR ArrayLength RSQR ElementType
    (21) StructType -> . STRUCT LCURL FieldDeclRep RCURL
    (25) PtrType -> . MUL BaseType

    LPRN            shift and go to state 61
    INT_T           shift and go to state 71
    FLOAT_T         shift and go to state 64
    UINT_T          shift and go to state 60
    COMPLEX_T       shift and go to state 66
    RUNE_T          shift and go to state 76
    BOOL_T          shift and go to state 67
    STRING_T        shift and go to state 72
    TYPE            shift and go to state 74
    IDENT           shift and go to state 69
    LSQR            shift and go to state 70
    STRUCT          shift and go to state 73
    MUL             shift and go to state 57

    StructType                     shift and go to state 68
    TypeToken                      shift and go to state 62
    Type                           shift and go to state 59
    ArrayType                      shift and go to state 56
    TypeName                       shift and go to state 65
    PtrType                        shift and go to state 58
    TypeLit                        shift and go to state 63
    QualifiedIdent                 shift and go to state 75

state 34

    (46) ConstDecl -> CONST ConstSpec .

    SEMCLN          reduce using rule 46 (ConstDecl -> CONST ConstSpec .)


state 35

    (51) IdentList -> IDENT . IdentRep
    (52) IdentRep -> . COMMA IDENT IdentRep
    (53) IdentRep -> . epsilon
    (208) epsilon -> .

    COMMA           shift and go to state 78
    LPRN            reduce using rule 208 (epsilon -> .)
    INT_T           reduce using rule 208 (epsilon -> .)
    FLOAT_T         reduce using rule 208 (epsilon -> .)
    UINT_T          reduce using rule 208 (epsilon -> .)
    COMPLEX_T       reduce using rule 208 (epsilon -> .)
    RUNE_T          reduce using rule 208 (epsilon -> .)
    BOOL_T          reduce using rule 208 (epsilon -> .)
    STRING_T        reduce using rule 208 (epsilon -> .)
    TYPE            reduce using rule 208 (epsilon -> .)
    IDENT           reduce using rule 208 (epsilon -> .)
    LSQR            reduce using rule 208 (epsilon -> .)
    STRUCT          reduce using rule 208 (epsilon -> .)
    MUL             reduce using rule 208 (epsilon -> .)
    AGN             reduce using rule 208 (epsilon -> .)

    epsilon                        shift and go to state 77
    IdentRep                       shift and go to state 79

state 36

    (29) Parameters -> LPRN . RPRN
    (30) Parameters -> LPRN . ParamList RPRN
    (31) ParamList -> . ParamDecl
    (32) ParamList -> . ParamDeclCommaRep
    (35) ParamDecl -> . IdentList Type
    (36) ParamDecl -> . Type
    (33) ParamDeclCommaRep -> . COMMA ParamDecl ParamDeclCommaRep
    (34) ParamDeclCommaRep -> . ParamDecl COMMA ParamDecl
    (51) IdentList -> . IDENT IdentRep
    (2) Type -> . TypeName
    (3) Type -> . TypeLit
    (4) Type -> . LPRN Type RPRN
    (5) TypeName -> . TypeToken
    (6) TypeName -> . QualifiedIdent
    (15) TypeLit -> . ArrayType
    (16) TypeLit -> . StructType
    (17) TypeLit -> . PtrType
    (7) TypeToken -> . INT_T
    (8) TypeToken -> . FLOAT_T
    (9) TypeToken -> . UINT_T
    (10) TypeToken -> . COMPLEX_T
    (11) TypeToken -> . RUNE_T
    (12) TypeToken -> . BOOL_T
    (13) TypeToken -> . STRING_T
    (14) TypeToken -> . TYPE IDENT
    (91) QualifiedIdent -> . IDENT DOT TypeName
    (18) ArrayType -> . LSQR ArrayLength RSQR ElementType
    (21) StructType -> . STRUCT LCURL FieldDeclRep RCURL
    (25) PtrType -> . MUL BaseType

    RPRN            shift and go to state 84
    COMMA           shift and go to state 85
    IDENT           shift and go to state 86
    LPRN            shift and go to state 61
    INT_T           shift and go to state 71
    FLOAT_T         shift and go to state 64
    UINT_T          shift and go to state 60
    COMPLEX_T       shift and go to state 66
    RUNE_T          shift and go to state 76
    BOOL_T          shift and go to state 67
    STRING_T        shift and go to state 72
    TYPE            shift and go to state 74
    LSQR            shift and go to state 70
    STRUCT          shift and go to state 73
    MUL             shift and go to state 57

    StructType                     shift and go to state 68
    IdentList                      shift and go to state 80
    ParamDeclCommaRep              shift and go to state 82
    TypeToken                      shift and go to state 62
    TypeLit                        shift and go to state 63
    ArrayType                      shift and go to state 56
    TypeName                       shift and go to state 65
    ParamDecl                      shift and go to state 81
    ParamList                      shift and go to state 87
    PtrType                        shift and go to state 58
    Type                           shift and go to state 83
    QualifiedIdent                 shift and go to state 75

state 37

    (73) FuncName -> IDENT .

    LPRN            reduce using rule 73 (FuncName -> IDENT .)


state 38

    (77) Receiver -> Parameters .

    IDENT           reduce using rule 77 (Receiver -> Parameters .)


state 39

    (71) FuncDecl -> FUNC FuncName . Signature FuncBody
    (72) FuncDecl -> FUNC FuncName . Signature
    (27) Signature -> . Parameters
    (28) Signature -> . Parameters Type
    (29) Parameters -> . LPRN RPRN
    (30) Parameters -> . LPRN ParamList RPRN

    LPRN            shift and go to state 36

    Parameters                     shift and go to state 88
    Signature                      shift and go to state 89

state 40

    (75) MethodDecl -> FUNC Receiver . MethodName Signature
    (76) MethodDecl -> FUNC Receiver . MethodName Signature FuncBody
    (78) MethodName -> . IDENT

    IDENT           shift and go to state 90

    MethodName                     shift and go to state 91

state 41
